# multivendor-ai-network-lab-liked-it

./: .gitignore  CLAUDE.md  CLI_RAG.md  COMPARISON.md  FEATURES.md  GAPS_REPORT.md  HEALTH_GATE.md  MCP.md  NETBOX_SOT.md  OPTIMIZATION_ROADMAP.md  PHASE5_LAUNCH.md  PHASE5_PLAN.md  PHASE6_LAUNCH.md  PHASE6_PLAN.md  POSTMORTEM.md  README.md  REMEDIATION.md  phase5_stress_report.txt  pyproject.toml  test_blast_radius.py  test_cli_rag.py  test_forecast.py  test_health_gate.py  test_mcp_server.py  test_netbox_sot.py  test_phase5_stress.py  test_postmortem.py  test_predict.py  test_remediation.py
cli_corpus/: cli-export.json  commands.json  ingest_md.py
containerlab-multivendor/: EVPN_RUNBOOK.md  HANDOFF_BOND_REVIEW.md  README.md
demo/: LINKEDIN_POST.md  architecture.html  build-captions.py  fabric-diagram.html  index.html  phase3.js  phase4-hero.html  record-demo.cjs  record-full-tour.cjs  record-linkedin.cjs
docs/: ARCHITECTURE_HARDENED.md  ARCHITECTURE_PHASE_5.md  CHANGE_PIPELINE.md  HEALTH_ENDPOINT.md  MCP_TOOLS.md  PHASE_5_HANDOFF.md  POST_AUDIT_FIXES_2.md  STREAMING_TELEMETRY_GAPS.md
jmcp/: devices.json
network-lab/: Dockerfile  MULTIVENDOR_LAB.md  cli_proxy.py  docker-compose.netbox.yml  docker-compose.yml  entrypoint.sh  lab_inventory.csv  lab_securecrt.csv  seed_netbox.py  sim_bgp_failure.sh  start_lab_tool.sh
scripts/: migrate_streaming_telemetry.sh
src/: .dockerignore  .env.example  Dockerfile  README.md  app.js  app.py  blast_radius.py  cli_rag.py  cve_db.json  docker-compose.yml  eval_harness.py  forecast_engine.py  gait_audit.py  gunicorn.conf.py  (+19 more)
(+124 files in other folders)
